html2jade modülü eklendi

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -5,7 +5,9 @@
 			a(href='http://www.nodejstr.com/') NodeJS Türkiye
 			&nbsp;2013
 
-link(rel='stylesheet', href='/assets/css/bootstrap-responsive.css')
-script(src='/assets/js/bootstrap.js')
+link(rel='stylesheet', href='/assets/css/bootstrap.css')
+script(src='/assets/js/bootstrap.min.js')
+script(src='/assets/js/angular.min.js')
+script(src='/assets/js/application.js')
 
 block footer
