--- a/views/header.jade
+++ b/views/header.jade
@@ -6,8 +6,8 @@ div.navbar.navbar-inverse.navbar-fixed-top
 				span.icon-bar
 				span.icon-bar
 			a.brand(href="#")
-				| Html to Jade converter developed by ExpressJS and AngularJS
+				| Html-Jade Çevirici
 			div.nav-collapse.collapse
 				ul.nav
 					li
-						a(href="https://github.com/cubuzoa/html2jade-service") View in Github
+						a(href="https://github.com/cubuzoa/html2jade-service") Github
